Here I change one of the alt tags.
I didn't give the alt tags official descriptions yet because I'm going to change them shortly.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<!-- Image Container 8 -->
 					<div>
 						<div>
-							<img src = './images/thumb/thumbnail_8.png' alt ='Image'>
+							<img src = './images/thumb/thumbnail_8.png' alt ='Alt Tag Edit to test github'>
 							<div>
 								<h3> Click to Enlarge</h3>
 								<p> Sign up for updates today</p>
